--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
+*{
+     padding: 0;
+     margin: 0;
+     box-sizing: border-box;
+}
 body{
     display: flex;
-    padding: 0;
-    margin: 0;
 }
 h1,h2,h3,h4,h5,h6,p,li,label,a,textarea{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -121,6 +124,7 @@ h1,h2,h3,h4,h5,h6,p,li,label,a,textarea{
 }
 #chat-image{
     display: none;
+    width: 100px;
 }
 /* chat space and bubbles */
 .sent-by-you{
@@ -149,3 +153,50 @@ h1,h2,h3,h4,h5,h6,p,li,label,a,textarea{
     margin: 10px;
     padding: 10px;
 } 
+.emoji-tray {
+     display: flex;
+     flex-wrap: wrap;
+     position: absolute;
+     bottom: 17vh;
+     gap: 10px;
+     right: 10%;
+     padding: 20px;
+     background-color: #e94d2a8f;
+     display: grid;
+     grid-template-columns: repeat(4, 1fr);
+     border-radius: 10px;
+     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+     display: none;
+ }
+ 
+ .emoji {
+     font-size: 24px;
+     padding: 10px 20px;
+     border: none;
+     background-color: #f0f0f0;
+     border-radius: 5px;
+     cursor: pointer;
+     transition: background-color 0.3s ease;
+ }
+ 
+ .emoji:hover {
+     background-color: #ddd;
+ }
+ .visible {
+     display: grid!important;
+ }
+ 
+ #toggleEmojiTray {
+     font-size: 18px;
+     padding: 10px;
+     background-color: #007bff;
+     color: #fff;
+     border: none;
+     border-radius: 5px;
+     cursor: pointer;
+     margin-bottom: 20px;
+ }
+ .uploaded-images{
+     width: 300px;
+     height: 150px;
+ }
