--- a/styles.css
+++ b/styles.css
@@ -87,13 +87,16 @@ h1,h2,h3,h4,h5,h6,p,li,label,a,textarea{
     height: 90%;
     width: 100%;
     overflow-y: scroll;
+    padding-bottom: 10px;
+}
+
+.chat-messages::-webkit-scrollbar{
+     display: none;
 }
 .chat-input-nav{
     box-sizing: border-box;
     width: 100%;
-    height: 10%;
-    min-height: 20px;
-    max-height: 30px;
+    height: 14%;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     padding: 5px;
     display: flex;
@@ -102,29 +105,31 @@ h1,h2,h3,h4,h5,h6,p,li,label,a,textarea{
 .chat-input-container{
     border: hidden;
     border-radius: 20px;
-    padding: 6px;
-    padding-left: 10px;
+    padding: 0 6px;
     display: flex;
     align-items: center;
     background-color: #c5c5c5;
-    width: 90%;
+    width: 95%;
 }
 .chat-input{
-    width: 80%;
-    height: 25px;
+    width: 100%;
+    height: 100%;
+    max-height: 50px;
     border: hidden;
     resize: none;
     overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-y: scroll;
     padding: 0;
-    background-color: #c5c5c5;
+    background-color: transparent;
+}
+.chat-input::-webkit-scrollbar{
+     display: none;
 }
 .chat-input:focus{
     outline: none;
 }
-#chat-image{
+#chat-camera, #chat-image{
     display: none;
-    width: 100px;
 }
 /* chat space and bubbles */
 .sent-by-you{
@@ -147,54 +152,47 @@ h1,h2,h3,h4,h5,h6,p,li,label,a,textarea{
     border-bottom-left-radius: 0;
 }
 .bubble-sent-by-other,.bubble-sent-by-you{
-    max-width: 80%;
+    max-width: 50%;
+    max-height: 400px;
     border: hidden;
+    overflow: hidden;
     border-radius: 20px;
     margin: 10px;
     padding: 10px;
 } 
 .emoji-tray {
-     display: flex;
      flex-wrap: wrap;
      position: absolute;
-     bottom: 17vh;
+     bottom: 10vh;
      gap: 10px;
-     right: 10%;
-     padding: 20px;
+     left: 1%;
+     padding: 5px;
      background-color: #e94d2a8f;
      display: grid;
      grid-template-columns: repeat(4, 1fr);
      border-radius: 10px;
      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-     display: none;
  }
  
  .emoji {
      font-size: 24px;
-     padding: 10px 20px;
+     padding: 5px;
      border: none;
-     background-color: #f0f0f0;
      border-radius: 5px;
      cursor: pointer;
-     transition: background-color 0.3s ease;
+     transition: background-color 0.5s ease;
  }
  
  .emoji:hover {
      background-color: #ddd;
  }
- .visible {
-     display: grid!important;
- }
- 
- #toggleEmojiTray {
+
+ .add-camera, .add-image, #toggleEmojiTray, .sendMsg {
      font-size: 18px;
      padding: 10px;
-     background-color: #007bff;
-     color: #fff;
      border: none;
      border-radius: 5px;
      cursor: pointer;
-     margin-bottom: 20px;
  }
  .uploaded-images{
      width: 300px;
