--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,7 @@ h1,h2,h3,h4,h5,h6,p,li,label,a,textarea{
     width: 100%;
     overflow-y: scroll;
     padding-bottom: 10px;
+    position: relative;
 }
 
 .chat-messages::-webkit-scrollbar{
@@ -195,6 +196,38 @@ h1,h2,h3,h4,h5,h6,p,li,label,a,textarea{
      cursor: pointer;
  }
  .uploaded-images{
-     width: 300px;
-     height: 150px;
+     width: 200px;
+     height: 100px;
+     background-color: #cc5500;
  }
+.uploaded-images img{
+     width: 100%;
+     height: 100%;
+     object-fit: contain;
+     border-radius: 10px;
+}
+.chat-image-container{
+     position: absolute;
+     width: 80vw;
+     height: 80vh;
+     background-color: #cc5500;
+}
+@media (max-width: 500px) {
+     .chat-space{
+          display: none;
+          width: 100%;
+          height: 100vh;
+     }
+     .all-messages{
+          width: 90%;
+     }
+     .no-messages-space{
+          display: none;
+     }
+     .chat-messages{
+          height: 80%;
+     }
+     .chat-input-nav{
+          height: 10%;
+     }
+}
