--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,10 @@
      box-sizing: border-box;
 }
 body{
-    display: flex;
+     width: 100vw;
+     height: 100vh;
+     overflow: hidden;
+     display: flex;
 }
 h1,h2,h3,h4,h5,h6,p,li,label,a,textarea{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -21,8 +24,9 @@ h1,h2,h3,h4,h5,h6,p,li,label,a,textarea{
     border-right: solid thin #c5c5c5;
 }
 .chats-list{
-    height: 85%;
+    height: 95%;
     overflow-y: scroll;
+    z-index: -2;
     margin: 0;
 }
 .spec-chat{
@@ -70,8 +74,8 @@ h1,h2,h3,h4,h5,h6,p,li,label,a,textarea{
     border: hidden;
     border-radius: 50%;
 }
-.no-messages-space,.chat-messages-space{
-    height: 85%;
+.no-messages-space,.chat-messages-space, #cameraContainer{
+    height: 100vh;
     width: 100%;
 }
 .no-messages-space{
@@ -84,24 +88,27 @@ h1,h2,h3,h4,h5,h6,p,li,label,a,textarea{
     display: none;
 }
 .chat-messages{
-    height: 90%;
+    height: 82vh;
     width: 100%;
     overflow-y: scroll;
     padding-bottom: 10px;
     position: relative;
 }
 
-.chat-messages::-webkit-scrollbar{
+::-webkit-scrollbar{
      display: none;
 }
 .chat-input-nav{
     box-sizing: border-box;
     width: 100%;
-    height: 14%;
+    height: 5vh;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     padding: 5px;
     display: flex;
     align-items: center;
+    .fa-paper-plane{
+          font-size: 25px;
+    }
 }
 .chat-input-container{
     border: hidden;
@@ -212,6 +219,11 @@ h1,h2,h3,h4,h5,h6,p,li,label,a,textarea{
      height: 80vh;
      background-color: #cc5500;
 }
+#cameraContainer {
+     background-color: #cc5500;
+     display: none;
+}
+   
 @media (max-width: 500px) {
      .chat-space{
           display: none;
